syntax = "proto3";

package entities;
option go_package = "/entities";

import "google/protobuf/any.proto";

message Error {
    int32 errorCode = 1;
    string errorDes = 2;
}

message User {
    string username = 1;
    string group = 2;
}

message Common {
    string lang = 1;
    string token = 2;
    User user = 3;
}

message BaseResponse {
    Error error = 1;
    google.protobuf.Any instrument = 3;
}

message BaseRequest{
    Common common = 1;
    google.protobuf.Any data = 3;
}

