syntax = "proto3";

package entities;
option go_package = "/entities";

import "common.proto";
import "model.proto";

service OrderService {
  rpc Order (OrderRequest) returns (BaseResponse) {}
  rpc UpdateOrder (OrderRequest) returns (BaseResponse) {}
}

enum STATUS_DELIVERY {
  UNKNOWN_STATUS_DELIVERY = 0;
  RECEIVED = 1;
  PREPARING = 2;
  DELIVERING = 3;
  FINISH = 4;
  REJECT = 5;
}

message OrderRequest {
  string id = 1;
  Table table = 2;
  repeated Dish dishes = 3;
  string note = 4;
  Common common = 5;
  STATUS_DELIVERY status = 6;
}

message OrderResponse {
  string id = 1;
  Table table = 2;
  repeated Dish dishes = 3;
  string note = 4;
  STATUS_DELIVERY status = 5;
  sint64 timeDelivery = 6;
}


